...
    i18n.changeLanguage(language);
    setCurrentLanguage(language)(dispatch);
    bottomSheetModalRef.current?.dismiss();
  };

  return (
    <Box testID="settingsScreen" flex={1} paddingVertical="sToM">
      <SettingsSwitchItem
        label={t('list.darkMode', { ns: 'settings' })}
        toggleSwitch={darkModeSwitch}
        isEnabled={isDarkMode}
      />
      <SettingsLanguageItem
...
