...
        }}
      /> */}
      <Screen
        name="SettingsScreen"
        component={SettingsScreen}
        options={{
          tabBarTestID: 'tabBarSettings',
          tabBarLabel: t('settings'),
          tabBarIcon: ({ focused }) => (
            <SvgIcon
              width={iconSize}
              height={iconSize}
              icon={SettingsIcon}
...
